# bhav-scopy.py

./: .gitignore  README.md  pyproject.toml
.llm-context/: config.toml  lc-project-notes.md  python-prompt.md
notebooks/: chart_demo.md  chart_demo.py
src/bhav_scopy_py/assets/: chart_template.js
src/bhav_scopy_py/charts/: trading_chart.py
