[project]
name = "bhav-scopy.py"
description = "Market Charting Widget for Notebooks"
version = "0.1.2"
authors = [
    { name = "restlessronin", email = "88921269+restlessronin@users.noreply.github.com" },
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "anywidget>=0.9.13",
    "pydantic>=2.10.5",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.jupytext]
formats = "ipynb,py"
cell_metadata_filter = "-all"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
ignore = ["F722"]

[project.optional-dependencies]
dev = ["mypy>=1.13.0", "pytest>=8.3.4", "ruff>=0.8.3"]
notebook = [
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "jupytext>=1.16.6",
    "notebook>=7.0.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
]
all = [
    "bhav-scopy.py[dev]",
    "bhav-scopy.py[notebook]"
]
